Fix: overflow

--- a/frontend/app/[locale]/globals.css
+++ b/frontend/app/[locale]/globals.css
@@ -8,6 +8,7 @@
     html {
         font-family: 'Montserrat', sans-serif;
         background: linear-gradient(90deg, #56CCF2 -32%, #2F80ED 145.82%);
+        overflow: hidden;
     }
 }
 
